Replace depricated Long constructor and renames static member which violated linting rule